# wormhole

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  project.md
_verification_scripts/: backend_contract_validation.py  clipboard_validation.py  macos_link_validation.py  remote_macos_exec.py  remote_rust_probe.py  wormhole_validation.py
_verification_scripts/rust_net_probe/: Cargo.toml
_verification_scripts/rust_net_probe/src/: main.rs
apps/desktop-ui/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop-ui/src/: App.tsx  main.tsx
apps/desktop-ui/src-tauri/: 2  Cargo.toml  tauri.conf.json
apps/desktop-ui/src/api/: apiBase.ts  events.ts  localClient.ts
apps/desktop-ui/src/components/: EdgeDropZone.tsx
apps/desktop-ui/src/components/AppShell/: AppShell.css  AppShell.tsx
apps/desktop-ui/src/components/ClipboardStatusCard/: ClipboardStatusCard.tsx
apps/desktop-ui/src/components/EdgeDropZone/: EdgeDropZone.css  index.tsx
apps/desktop-ui/src/components/EdgeEntry/: EdgeEntry.tsx
apps/desktop-ui/src/components/HistoryGroup/: HistoryGroup.tsx
apps/desktop-ui/src/components/OnboardingFlow/: OnboardingFlow.css  OnboardingFlow.tsx
apps/desktop-ui/src/localApi/: apiBase.ts  dto.ts  events.ts  localClient.ts  settingsMapper.ts
apps/desktop-ui/src/pages/: Clipboard.tsx  Dashboard.tsx  History.tsx  Settings.tsx  Transfers.tsx
apps/desktop-ui/src/platform/: filePathProvider.ts
apps/desktop-ui/src/store/: appState.tsx
apps/desktop-ui/src/styles/: index.css
assets/wormhole/: Wormhole.icns
crates/wormhole-cli/: Cargo.toml
crates/wormhole-cli/src/: main.rs
crates/wormhole-core/: Cargo.toml
crates/wormhole-core/src/: lib.rs
crates/wormhole-daemon/: Cargo.toml  build.rs
crates/wormhole-daemon/macos/: Info.plist
crates/wormhole-daemon/src/: auth.rs  clipboard_transport.rs  dto.rs  error.rs  main.rs  state.rs  transfer_transport.rs
crates/wormhole-daemon/src/api/: events.rs  local.rs  mod.rs  peer.rs
crates/wormhole-daemon/src/service/: clipboard.rs  connection.rs  history.rs  mod.rs  settings.rs  transfer.rs
crates/wormhole-daemon/src/transport/: clipboard_transport.rs  mod.rs  peer_http.rs  transfer_transport.rs
crates/wormhole-desktop/: Cargo.toml  build.rs
crates/wormhole-desktop/src/: app_lifecycle.rs  browser_open.rs  daemon_manager.rs  dropzone_controller.rs  local_api_client.rs  main.rs  native_file_picker.rs  startup_controller.rs  tray_controller.rs
crates/wormhole-platform/: Cargo.toml
crates/wormhole-platform/src/: lib.rs  macos_clipboard.rs  windows_clipboard.rs
docs/: api-contract.md  current-implementation-status.md  security-boundary.md  technical-validation.md
docs/frontend-contract/: api.md  events.md  mock-history.json  mock-state-connected.json  mock-state-offline.json  mock-transfer-progress.json  settings-dto.json  state-shape.json  task-dto.json
scripts/: build-macos-product.sh  build-windows-product.ps1  deploy-macos.py  diagnose-macos-product-network.sh  diagnose-windows-product-network.ps1  formal-macos-session-validation.sh  generate-icons.py  init-mvp-configs.ps1  install-windows-firewall-rule.ps1  macos-daemon-app.py  macos-daemon-supervisor.py  run-macos-daemon.py  run-windows-daemon.ps1  start-macos-screen-daemon.sh
(+15 files in other folders)
