[package]
name = "rust-net-probe"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
