[package]
name = "wormhole-platform"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
image.workspace = true
wormhole-core = { path = "../wormhole-core" }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
